--- a/package.json
+++ b/package.json
@@ -5,18 +5,46 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
+    "test": "jest -c test/jest.config.js",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "daisyui": "^1.16.2",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.5.2",
+    "recoil-persist": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
+    "@types/jest": "^27.0.3",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
-    "eslint": "7",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "dotenv": "^10.0.0",
+    "eslint": "^8.2.0",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "jest": "^27.3.1",
+    "nock": "^13.2.1",
+    "postcss": "^8.3.11",
+    "prettier": "2.4.1",
+    "tailwindcss": "^2.2.19",
+    "ts-jest": "^27.0.7",
     "typescript": "4.5.2"
   }
 }
