--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
     "overrides": [
         {
             "files": ["*.js"],
@@ -8,9 +11,9 @@
         }
     ],
     "env": {
+        "node": true,
         "browser": true,
-        "es2021": true,
-        "node": true
+        "amd": true
     },
     "extends": [
         "eslint:recommended",
@@ -19,19 +22,5 @@
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
         "plugin:@next/next/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-    }
+    ]
 }
