--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "next-latest-boilerplate",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -15,6 +16,7 @@
     "axios": "^0.24.0",
     "daisyui": "^1.16.2",
     "next": "12.0.4",
+    "prettier": "2.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "recoil": "^0.5.2",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@next/eslint-plugin-next": "^12.0.4",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -35,14 +38,11 @@
     "babel-loader": "^8.2.3",
     "dotenv": "^10.0.0",
     "eslint": "^8.2.0",
-    "eslint-config-next": "12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
     "jest": "^27.3.1",
     "nock": "^13.2.1",
     "postcss": "^8.3.11",
-    "prettier": "2.4.1",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.7",
     "typescript": "4.5.2"
